RESOLVED FIXED 207998
WKWebView with non-zero origin has the wrong top content inset with NSWindowStyleMaskFullSizeContentView
https://bugs.webkit.org/show_bug.cgi?id=207998
Summary WKWebView with non-zero origin has the wrong top content inset with NSWindowS...
Tim Horton
Reported 2020-02-20 01:54:25 PST
WKWebView with non-zero origin has the wrong top content inset with NSWindowStyleMaskFullSizeContentView
Attachments
Patch (19.91 KB, patch)
2020-02-20 01:55 PST, Tim Horton
no flags
Tim Horton
Comment 1 2020-02-20 01:55:59 PST
Tim Horton
Comment 2 2020-02-20 01:56:16 PST
WebKit Commit Bot
Comment 3 2020-02-20 09:34:32 PST
Comment on attachment 391270 [details] Patch Clearing flags on attachment: 391270 Committed r257066: <https://trac.webkit.org/changeset/257066>
WebKit Commit Bot
Comment 4 2020-02-20 09:34:33 PST
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 5 2020-02-20 11:14:40 PST
*finally*
Note You need to log in before you can comment on or make changes to this bug.