WKWebView with non-zero origin has the wrong top content inset with NSWindowStyleMaskFullSizeContentView https://bugs.webkit.org/show_bug.cgi?id=207998 <rdar://problem/40942425>

Reviewed by Sam Weinig.

Source/WebKit:

New API tests: TopContentInset.{AutomaticAdjustment, AutomaticAdjustmentDisabled, AutomaticAdjustmentDoesNotAffectInsetViews}

* UIProcess/Cocoa/WebViewImpl.mm:
(WebKit::WebViewImpl::updateContentInsetsIfAutomatic):
Previously, a WKWebView with frame.origin anywhere other than {0, 0}
would end up with the same top content inset as if it overlapped the
titlebar.

It's not clear what the original code was going for; we can determine
the overlapping portion of the contentLayoutRect by simply converting
it from window coordinates to WKWebView coordinates and looking at the
origin (ensuring we don't let it go negative).

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKitCocoa/TopContentInset.mm: Renamed from Tools/TestWebKitAPI/Tests/WebKitCocoa/FullscreenTopContentInset.mm.
(-[FullscreenChangeMessageHandler userContentController:didReceiveScriptMessage:]):
(TestWebKitAPI::TEST):
Add some tests for top content insets.


Canonical link: https://commits.webkit.org/220979@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257066 268f45cc-cd09-0410-ab3c-d52691b4dbfc